Changed user view folder to users and user controller is now pluralized. Year index page year clickable by row now ( not tested).

--- a/vegas_lines/app/views/years/index.html.erb
+++ b/vegas_lines/app/views/years/index.html.erb
@@ -7,7 +7,7 @@
       <th>Season</th>
     </tr>
   <% @years.each do |year| %>
-    <tr>
+    <tr class="clickable-row" onclick="location.href='<%= year_weeks_path(year.id) %>'">
       <td><%= year.year %></td>
     </tr>
   <% end %>
