Year index page clickable row does not work so added a link_to for now. Added an index to year in the years table. After create_save method added to year model.

--- a/vegas_lines/app/views/years/index.html.erb
+++ b/vegas_lines/app/views/years/index.html.erb
@@ -6,10 +6,12 @@
     <tr>
       <th>Season</th>
     </tr>
-  <% @years.each do |year| %>
-    <tr class="clickable-row" onclick="location.href='<%= year_weeks_path(year.id) %>'">
-      <td><%= year.year %></td>
-    </tr>
+  <% if @years != nil %>
+    <% @years.each do |year| %>
+      <tr class="clickable-row" onclick="location.href='<%= year_weeks_path(year.id) %>'">
+	<td><%= link_to "#{year.year}", year_weeks_path(year.id)  %></td>
+      </tr>
+    <% end %>
   <% end %>
   </table>
 </div>
