16 games are created upon a week being created. Games is nested under weeks route. Created Game controller.

--- a/vegas_lines/app/views/weeks/index.html.erb
+++ b/vegas_lines/app/views/weeks/index.html.erb
@@ -4,7 +4,7 @@
   <table class="table_list">
     <% @weeks.each do |week| %>
       <tr>
-	<td>Week <%= week.week %> </td>
+	<td><%= link_to "Week #{week.week}", week_games_path(week.id) %> </td>
       </tr>
     <% end %>
   </table>
