--- a/vegas_lines/app/assets/stylesheets/application.css
+++ b/vegas_lines/app/assets/stylesheets/application.css
@@ -4,4 +4,15 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
  *= require_tree . 
+ *= require jquery.timeentry
+ *= require jquery-ui-1.8.17.custom
 */
+
+#container {
+  width: 50%;
+  margin: 0 auto;
+  background-color: #FFF;
+  padding: 20px 40px;
+  border: solid 1px black;
+  margin-top: 20px;
+}
