--- a/vegas_lines/app/views/layouts/application.html.erb
+++ b/vegas_lines/app/views/layouts/application.html.erb
@@ -5,12 +5,14 @@
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= javascript_tag "$.datepicker.setDefaults({ buttonImage: '#{image_path 'calendar.png'}'})" %>
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-
-<%= yield %>
-
+  <div id="container">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    
+    <%= yield %>
+  </div>
 </body>
 </html>
