Week index link added to week edit view.

--- a/vegas_lines/app/views/weeks/edit.html.erb
+++ b/vegas_lines/app/views/weeks/edit.html.erb
@@ -15,5 +15,5 @@
       <%= render "game_fields", :f => f2 %>
     <% end %>
   </table>
-  <%= f.submit %>
+  <%= f.submit %> | <%= link_to "Week Index", year_weeks_path(@year, @week) %>
 <% end %>
