Created Lines model and controller. Week index will be hit to display all lines weeks. Edit view created for lines. Lines table created.

--- a/vegas_lines/app/views/weeks/index.html.erb
+++ b/vegas_lines/app/views/weeks/index.html.erb
@@ -7,6 +7,12 @@
 	<td><%= link_to "Week #{week.week}", edit_year_week_path(@year.id, week.id) %> </td>
       </tr>
     <% end %>
+    <% @weeks.each do |week| %>
+      <% p week.lines %>
+      <tr>
+	<td><%= link_to "Week #{week.week} Lines", edit_week_line_path(week.id, week.lines) %>
+      </tr>
+    <% end %>
   </table>
 </div>
 <%= link_to "Year Index", years_path %>
