Sign out option added to application layout. Links css class added for padding.

--- a/vegas_lines/app/assets/stylesheets/application.css
+++ b/vegas_lines/app/assets/stylesheets/application.css
@@ -16,4 +16,12 @@
   border: solid 1px black;
   margin-top: 20px;
 }
+#user_nav {
+  float: right;
+  font-size: 12px;
+}
+.links{
+  padding-top:20px;
+}
+
 
