--- a/vegas_lines/app/views/weeks/index.html.erb
+++ b/vegas_lines/app/views/weeks/index.html.erb
@@ -19,4 +19,6 @@
     <% end %>
   </table>
 </div>
-<%= link_to "Year Index", years_path %>
+<div class="links">
+  <%= link_to "Year Index", years_path %>
+</div>
