--- a/vegas_lines/app/views/years/index.html.erb
+++ b/vegas_lines/app/views/years/index.html.erb
@@ -15,5 +15,6 @@
   <% end %>
   </table>
 </div>
-  <%= link_to 'New Season', new_year_path %>
+<div class="links">
+   <%= link_to "User Index", user_path(current_user) %> | <%= link_to 'New Season', new_year_path %>
 </div>
