--- a/vegas_lines/app/views/users/show.html.erb
+++ b/vegas_lines/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <h1> User's Page </h1>
 
-<%= link_to "Year Index", years_path %>
+<% if current_user.admin == true %>
+  <%= link_to "Year Index", years_path %></br>
+<% end %>
 <%= link_to "Lines Index", year_weeks_path(@get_current_year) %>
