--- a/vegas_lines/app/views/years/new.html.erb
+++ b/vegas_lines/app/views/years/new.html.erb
@@ -2,8 +2,10 @@
 
 <%= form_for @year do |f| %>
   <div class="field">
-    <%= f.label :year %>:<br />
-    <%= f.text_field :year %>
+    <%= f.label :year %>:
+    <%= f.text_field :year %><br />
+    <%= f.label :start_date%>:
+    <%= f.text_field :start_date, :class => 'datepicker' %>
   </div>
   <div>
     <%= f.submit %>
