Made an alternative weeks_for_lines instance variable for displaying week lines for week index view.

--- a/vegas_lines/app/views/weeks/index.html.erb
+++ b/vegas_lines/app/views/weeks/index.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </table>
   <table>
-    <% @weeks.each do |week| %>
+    <% @weeks_for_lines.each do |week| %>
       <tr>
 	<td><%= link_to "Week #{week.week} Lines", edit_week_line_path(week, get_week_lines_id(week, current_user)) %>
       </tr>
