Cancan ability model and load_and_authorize_resource function added to controllers.

--- a/vegas_lines/app/views/years/index.html.erb
+++ b/vegas_lines/app/views/years/index.html.erb
@@ -16,5 +16,8 @@
   </table>
 </div>
 <div class="links">
-   <%= link_to "User Index", user_path(current_user) %> | <%= link_to 'New Season', new_year_path %>
+  <%= link_to "User Index", user_path(current_user) %>
+  <% if current_user.admin? %>
+    | <%= link_to 'New Season', new_year_path %>
+  <% end %>
 </div>
