--- a/vegas_lines/app/assets/stylesheets/years.css.scss
+++ b/vegas_lines/app/assets/stylesheets/years.css.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the years controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#year_year{
+  width:90px;
+}
