--- a/vegas_lines/app/views/years/new.html.erb
+++ b/vegas_lines/app/views/years/new.html.erb
@@ -1,12 +1,16 @@
 <h1> Year Creation </h1>
 
 <%= form_for @year do |f| %>
-  <div class="field">
-    <%= f.label :year %>:
-    <%= f.text_field :year %><br />
-    <%= f.label :start_date%>:
-    <%= f.text_field :start_date, :class => 'datepicker' %>
-  </div>
+  <table>
+    <tr>
+      <td><%= f.label :year %>:</td>
+      <td><%= f.text_field :year %></td>
+    </tr>
+    <tr>
+      <td><%= f.label :start_date%>:</td>
+      <td><%= f.text_field :start_date, :class => 'datepicker' %> Note: Season starts on Thursday </td>
+    </tr>
+  </table>
   <div>
     <%= f.submit %>
   </div>
