Creation of OfficalLines model and controller. Week and OfficalLine have one to one. Started adding to game edit view.

--- a/vegas_lines/app/views/weeks/edit.html.erb
+++ b/vegas_lines/app/views/weeks/edit.html.erb
@@ -15,5 +15,8 @@
       <%= render "game_fields", :f => f2 %>
     <% end %>
   </table>
+  <% if current_user.admin == true %>
+    <%= link_to "Week's Offical Lines", edit_week_offical_line_path(@week, @offical_lines) %> |
+  <% end %>
   <%= link_to "Week Index", year_weeks_path(@year, @week) %> | <%= f.submit %>
 <% end %>
