Fixed spelling of Official. Wired up official_lines but is not saving, yet.

--- a/vegas_lines/app/views/official_lines/edit.html.erb
+++ b/vegas_lines/app/views/official_lines/edit.html.erb
@@ -1,6 +1,6 @@
 <h1 id='lines_header'> <%= "Week #{@week.id} Lines" %> </h1>
 
-<%= form_for @offical_lines, :url => week_offical_line_path(@week,params[:id]), :method => :put do |f| %>
+<%= form_for @official_lines, :url => week_official_line_path(@week,params[:id]), :method => :put do |f| %>
   <table id='lines_edit_table'>
     <tr>
       <td></td>
