--- a/vegas_lines/app/views/weeks/edit.html.erb
+++ b/vegas_lines/app/views/weeks/edit.html.erb
@@ -16,7 +16,7 @@
     <% end %>
   </table>
   <% if current_user.admin == true %>
-    <%= link_to "Week's Offical Lines", edit_week_offical_line_path(@week, @offical_lines) %> |
+    <%= link_to "Week's Official Lines", edit_week_official_line_path(@week, @official_lines) %> |
   <% end %>
   <%= link_to "Week Index", year_weeks_path(@year, @week) %> | <%= f.submit %>
 <% end %>
