Turned autocomplete off for entering spread lines.

--- a/vegas_lines/app/views/official_lines/edit.html.erb
+++ b/vegas_lines/app/views/official_lines/edit.html.erb
@@ -22,7 +22,7 @@
 	  <%= Time.parse(game.time).strftime("%l:%M %p") %>
 	<% end %>
       </td>
-      <td class='spread_td'><%= f.text_field "game#{index+1}".to_sym, :class => 'spread_field' %></td>
+      <td class='spread_td'><%= f.text_field "game#{index+1}".to_sym, :class => 'spread_field', :autocomplete => :off  %></td>
     </tr>
   <% end %>
   </table>
